added unit tests for AuthService Class