@@ -8,10 +8,17 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.UUID;
 
-import static org.mockito.Mockito.when;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class BuildingServiceTests {
@@ -38,19 +45,36 @@ public class BuildingServiceTests {
     Assertions.assertEquals(2, searchResult.size());
   }
 
+//  @Test
+//  public void BuildingService_getAllBuildings_returnMoreThanOneBuilding(){
+//    // Arrange
+//    List<Building> buildings = List.of(
+//            new Building("Richards Hall"),
+//            new Building("Wasatch Hall")
+//    );
+//    when(buildingRepository.findAll()).thenReturn(buildings);
+//    // Act
+//    List<Building> searchResult = buildingService.getAllBuildings();
+//    // Assert
+//    Assertions.assertNotNull(searchResult);
+//    Assertions.assertEquals(2, searchResult.size());
+//  }
+
   @Test
-  public void BuildingService_getAllBuildings_returnMoreThanOneBuilding(){
+  public void BuildingService_getAllBuildingsPagination_returnOnePage(){
     // Arrange
-    List<Building> buildings = List.of(
-            new Building("Richards Hall"),
-            new Building("Wasatch Hall")
+    Pageable pageable = PageRequest.of(0, 2);
+    List<Building> buildings = Arrays.asList(
+            new Building("Building A"),
+            new Building("Building B")
     );
-    when(buildingRepository.findAll()).thenReturn(buildings);
-    // Act
-    List<Building> searchResult = buildingService.getAllBuildings();
-    // Assert
-    Assertions.assertNotNull(searchResult);
-    Assertions.assertEquals(2, searchResult.size());
+    Page<Building> buildingPage = new PageImpl<>(buildings, pageable, buildings.size());
+    when(buildingRepository.findAll(pageable)).thenReturn(buildingPage);
+
+    Page<Building> result = buildingService.getAllBuildingsPagination(pageable);
+
+    Assertions.assertEquals(2, result.getContent().size());
+    verify(buildingRepository, times(1)).findAll(pageable);
   }
 
 }
